--- a/composer.json
+++ b/composer.json
@@ -6,10 +6,15 @@
     "license": "MIT",
     "require": {
         "php": "^8.1",
+        "blade-ui-kit/blade-icons": "^1.5",
+        "davidhsianturi/blade-bootstrap-icons": "^1.4",
         "guzzlehttp/guzzle": "^7.2",
         "laravel/framework": "^10.10",
         "laravel/sanctum": "^3.2",
-        "laravel/tinker": "^2.8"
+        "laravel/tinker": "^2.8",
+        "livewire/livewire": "^3.2",
+        "owenvoke/blade-entypo": "^2.1",
+        "owenvoke/blade-fontawesome": "^2.4"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
