--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,8 @@
         "laravel/tinker": "^2.8",
         "livewire/livewire": "^3.2",
         "owenvoke/blade-entypo": "^2.1",
-        "owenvoke/blade-fontawesome": "^2.4"
+        "owenvoke/blade-fontawesome": "^2.4",
+        "pusher/pusher-php-server": "^7.2"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
