--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
         "vite": "^4.0.0"
     },
     "dependencies": {
-        "bootstrap": "^5.3.2"
+        "bootstrap": "^5.3.2",
+        "vue": "^3.3.10"
     }
 }
